<resources>
    <string name="app_name">COMET</string>
    <string name="log_in_">LOG-IN</string>
    <string name="e_mail">E-mail</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="ok">OK</string>
    <string name="sign_up_message">Sign up to COMET</string>
    <string name="sign_in">SIGN IN</string>
    <string name="signin">SIGN_IN</string>
    <string name="log_in">LOG-IN</string>
    <string name="sign_up">SIGN UP</string>
    <string name="log_in_first">LOG IN</string>
    <string name="name">Name</string>
    <string name="username">Username</string>
    <string name="create_group">CREATE GROUP</string>
    <string name="group_name_hint">Group name</string>
    <string name="enter_group_key">Enter group key:</string>
    <string name="create_new_group">Create New Group</string>
    <string name="ok_group">OK</string>
    <string name="enter_course_key">ENTER COURSE KEY</string>
    <string name="enter_group_key_message">Enter provided group key</string>
    <string name="delete_group">Delete Group</string>
    <string name="textview">TextView</string>
    <string name="group_key">Group Key:</string>
    <string name="logut">LOGUT</string>
    <string name="textview_confirmation">TextView</string>
    <string name="leave_group">Leave Group</string>
    <string name="add_new_group">Add New Group</string>
    <string name="members">Members</string>
    <string name="username_memberlist">Username</string>
    <string name="textview_membername">TextView</string>
    <string name="name_group">name</string>
    <string name="reset_password">Reset Password</string>
    <string name="members_">Members</string>
    <string name="memberName">TextView</string>
    <string name="separator">⬤</string>
    <string name="launch_logo_description">Launch Logo</string>
    <string name="group_logo_description">Group logo description</string>
    <string name="group_key_hint">Group Key</string>
    <string name="enter_message_hint">Type your message...</string>
    <string name="gallery_button_description">Gallery Button</string>
    <string name="send_message_button_description">Send message button</string>
</resources>
